--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+@use '@angular/material' as mat;
+@use '../_theme-colors' as tc;
+
+html {
+    @include mat.theme((
+        color: (
+            primary: tc.$primary-palette,
+            tertiary: tc.$tertiary-palette
+        ),
+        typography: Roboto,
+        density: 0,
+    ));
+
+    &.dark-mode { 
+        color-scheme: dark
+    }
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
